--- a/src/main/resources/templates/skaderapport.html
+++ b/src/main/resources/templates/skaderapport.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -7,7 +6,6 @@
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
-
 
 <!-- MENUBAR -->
 <nav class="menubar">
@@ -40,7 +38,6 @@
             </div>
         </li>
 
-
         <li class="dropdown">
             <a th:href="@{/tilstandsrapport}">Rapporter</a>
             <div class="dropdown-content">
@@ -55,12 +52,13 @@
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
+
 <div class="intro-sr">
     <h1>Skaderapporter</h1>
 </div>
 
 <div class="opret-skadeRapport">
-<a href="opretskaderapport" class="button">Opret ny skaderapport</a>
+    <a href="opretskaderapport" class="button">Opret ny skaderapport</a>
 </div>
 
 <div class="sr-oversigt">
@@ -87,17 +85,17 @@
             <td th:text="${rapport.prisTotal}"></td>
             <td th:text="${rapport.beskrivelse}"></td>
             <td>
-                <div class="slet-knapSkaderapport">
-                <form th:action="@{'/skaderapport/slet/' + ${rapport.skadeId}}" method="get"
+                <!-- RETTET: Slet form med korrekt action og parameter -->
+                <form th:action="@{/skaderapport/slet}" method="post"
                       onsubmit="return confirm('Er du sikker på, at du vil slette denne skaderapport?');">
-                    <button type="submit" class="slet-knap">Slet</button>
+                    <input type="hidden" name="id" th:value="${rapport.skadeId}" />
+                    <button type="submit" class="slet-knapSkaderapport">Slet</button>
                 </form>
-            </div>
-
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+
 </body>
 </html>
