--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body class="login-body">
 <div class="login-container">
     <div class="logo">
-        <img src="https://bilabonnement.dk/wp-content/uploads/2020/06/Logo_2.svg" alt="Bilabonnement A/S Logo">
+        <img src="/images/images/logo.jpg" alt="Bilabonnement A/S Logo">
     </div>
 
     <div th:if="${error}" class="error-message" th:text="${error}"></div>
